--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,1 +1,4 @@
-<%= render 'form' %>
+
+<%= form_tag student_path(@student), method: "put" do %>
+ <%= render partial: 'form', locals: {student: @student}, post: Student.new %>
+<% end %>
